# VkTestBed

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Build.py  Build.sh  CMakeLists.txt  README.md  WinGenerateProjects.bat
assets/shaders/: AOGen.comp  Background.frag  Background.vert  EquiToCube.comp  HelloTriangle.vert  IntegrationGen.comp  IrradianceCalcSH.comp  IrradianceReduce.comp  Minimal3DColored.frag  Minimal3DColored.vert  Minimal3DTextured.frag  Minimal3DTextured.vert  MinimalPBR.frag  MinimalPBR.vert  Outline.frag  PrefilteredGen.comp  Shadowmap.frag  Shadowmap.vert  Stencil.frag  Stencil.vert  ZPrepass.frag  ZPrepass.vert  ZPrepassAlpha.frag  ZPrepassAlpha.vert  ZPrepassOpaque.vert
assets/shaders/ao/: AOBilateral.comp  AOGen.comp  ZGen.comp  ZMipGen.comp
assets/shaders/common/: Cubemap.glsl  DebugGrid.glsl  Pbr.glsl  PbrIbl.glsl  SphericalHarmonics.glsl  VertexCompressed.glsl  VertexNaive.glsl
assets/shaders/environment/: Background.frag  Background.vert  EquiToCube.comp  IntegrationGen.comp  IrradianceCalcSH.comp  IrradianceReduce.comp  PrefilteredGen.comp
assets/shaders/outline/: ObjectId.frag  ObjectId.vert  Outline.frag  Outline.vert  Stencil.frag  Stencil.vert
assets/shaders/postfx/: BloomDownsample.comp  BloomUpsample.comp  Final.comp
assets/shaders/shadows/: ShadowClient.glsl  ShadowDebug.frag  ShadowDebug.vert  ShadowmapAlpha.frag  ShadowmapAlpha.vert  ShadowmapOpaque.vert
cmake/: utils.cmake
scripts/: CompileShaders.py  CompressTextures.py  DiffuseTransmission.py  DownloadAssets.py  Format.py
src/: EntryPoint.cpp  Pch.h
src/Core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Bitflags.h  Camera.cpp  Camera.h  Event.h  Frame.h  GeometryData.cpp  GeometryData.h  GeometryProvider.h  GltfImporter.cpp  GltfImporter.h  ImGuiInit.cpp  ImGuiUtils.cpp  ImGuiUtils.h  ImageData.cpp  ImageData.h  Keycodes.h  Material.cpp  Material.h  ModelConfig.h  ModelLoader.cpp  ModelLoader.h  Primitives.cpp  Primitives.h  RenderContext.cpp  RenderContext.h  Scene.cpp  Scene.h  SceneEditor.cpp  SceneEditor.h  SceneGraph.cpp  SceneGraph.h  ShaderManager.cpp  ShaderManager.h  SystemWindow.cpp  SystemWindow.h  TangentsGenerator.cpp  (+11 more)
src/Cpp/: Assert.cpp  Assert.h  Bitflags.h  OpaqueBuffer.cpp  OpaqueBuffer.h  SyncQueue.h  ThreadPool.h  Timer.h  Vassert.cpp  Vassert.h
src/Gui/: FilesystemBrowser.cpp  FilesystemBrowser.h  ImGuiInit.cpp  ImGuiInit.h  ImGuiUtils.cpp  ImGuiUtils.h  ModelLoaderGui.cpp  ModelLoaderGui.h  SceneEditor.cpp  SceneEditor.h  SceneGui.cpp  SceneGui.h
src/RendererComponents/: AOHandler.cpp  AOHandler.h  DynamicUniformBuffer.cpp  DynamicUniformBuffer.h  EnvironmentHandler.cpp  EnvironmentHandler.h  PostProcessor.cpp  PostProcessor.h  ShadowmapHandler.cpp  ShadowmapHandler.h  ViewHandler.cpp  ViewHandler.h
src/Renderers/: HelloRenderer.cpp  HelloRenderer.h  Minimal3D.cpp  Minimal3D.h  MinimalPBR.cpp  MinimalPBR.h  Renderer.h  RendererFactory.cpp  RendererFactory.h
src/Vulkan/: Barrier.cpp  Barrier.h  Buffer.cpp  Buffer.h  BufferUtils.cpp  BufferUtils.h  Common.cpp  Common.h  DeletionQueue.cpp  DeletionQueue.h  Descriptor.cpp  Descriptor.h  Image.cpp  Image.h  ImageLoaders.cpp  ImageLoaders.h  ImageUtils.cpp  ImageUtils.h  IndexBuffer.h  MakeBuffer.cpp  MakeImage.cpp  MakeImage.h  MeshBuffers.h  Pipeline.cpp  Pipeline.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Texture.h  Utils.cpp  Utils.h  VertexBuffer.h  VkInit.cpp  VkInit.h  VkUtils.cpp  VkUtils.h
